--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,18 @@ div.logo img {
     padding: 15px 40px 30px 40px;
 }
 
+.button_search {
+    border: 0;
+    border-radius: 30px;
+    background-color: #9356DC;
+    color: white;
+    /*font-weight: bold;*/
+    font-size: 16px;
+    padding: 15px 20px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin: 20px;
+}
+
 .working {
     display: flex;
     flex-direction: column;
