--- a/css/style.css
+++ b/css/style.css
@@ -1,164 +1,183 @@
-body{
-    font-family: Arial, serif;
-    /*font-size: 16px;
-    font-weight: bold;
-    max-width: 1280px;*/
-    /*margin: auto;*/
-    padding: 0;
-    margin: 0;
+body {
+  font-family: Arial, serif;
+  padding: 0;
+  margin: 0;
 }
 
 h1, h2 {
-    font-size: 22px;
-    font-weight: bolder;
+  font-size: 22px;
+  font-weight: bolder;
 }
 
 h4 {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.logo {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-
-.loc {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    background-color: rgb(234, 234, 234);
-    padding: 15px 0;
+header .header__logo {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 30px;
+  margin: 20px;
 }
 
 .form {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  display: flex;
 }
-
 .form input {
-    background-color: rgb(234, 234, 234);
-    border: 0;
-    font-size: 16px;
-    font-weight: bold;
-    color: black;
-    opacity: 1;
+  background-color: rgb(234, 234, 234);
+  border: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  opacity: 1;
 }
-
-.form_search {
-    color: black;
-    opacity: 1;
+.form i {
+  align-self: center;
+  margin-right: 10px;
 }
-
-div.logo img {
-    scale: 0.4;
-
+.form__loc {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: rgb(234, 234, 234);
+  padding: 15px 0;
 }
 
 .explo {
-    background-color: rgb(246, 246, 246);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    padding: 15px 40px 30px 40px;
-}
-
-.button_search {
-    border: 0;
-    border-radius: 30px;
-    background-color: #9356DC;
-    color: white;
-    /*font-weight: bold;*/
-    font-size: 16px;
-    padding: 15px 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    margin: 20px;
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  padding: 15px 40px 30px 40px;
 }
 
 .working {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.working__title {
+  width: 100%;
+  max-width: 500px;
+}
+.working__box {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  gap: 20px;
+  align-items: center;
 }
 
-.working_title {
-    display: flex;
+.resto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(246, 246, 246);
+  padding: 20px;
+  gap: 20px;
+}
+.resto__title {
+  width: 100%;
+  max-width: 500px;
 }
 
-.working_box {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    gap: 20px;
-    align-items: center;
+footer {
+  background-color: rgb(53, 53, 53);
+  padding: 20px;
+  width: 100%;
+  color: white;
+}
+footer .footer__logo {
+  display: flex;
+  width: 100%;
+  height: 20px;
+  filter: invert(100%);
 }
 
-.working_card {
-    display: flex;
-    /*border: solid 1px rgb(246, 246, 246);*/
-    border-radius: 20px;
-    width: 100%;
-    max-width: 500px;
-    align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: rgb(246, 246, 246);
+.button_search {
+  border: 0;
+  border-radius: 30px;
+  background-image: linear-gradient(to top left, #9356DC, #FF79DA);
+  color: white;
+  font-size: 16px;
+  padding: 15px 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 20px;
 }
 
-.card3 {
-    background-color: #9256dc1f;
-    /*border-color: #9256dc1f;*/
+.card-working {
+  display: flex;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 500px;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(246, 246, 246);
+}
+.card-working__icon {
+  margin-right: 20px;
+  color: gray;
+}
+.card-working__icon--highlight {
+  color: #9356DC;
+}
+.card-working--highlight_back {
+  background-color: rgba(146, 86, 220, 0.1215686275);
 }
 
-.card3 .icon2 {
-    color: #9356DC;
+.card-resto {
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  width: 100%;
+  max-width: 500px;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: rgb(246, 246, 246);
 }
-
-i {
-    margin-right: 20px;
-
+.card-resto__img {
+  border-radius: 15px 15px 0 0;
+  width: 100%;
+  height: 170px;
+  object-fit: cover;
 }
-
-.circle-icon {
-    background: #9356DC;
-    color: white;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 10px;
-    padding: 8px;
-    margin: 0px;
+.card-resto__description {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.card-resto__txt {
+  padding: 0 10px 10px 10px;
+  box-sizing: border-box;
+}
+.card-resto__icon {
+  align-self: center;
+  padding: 10px;
 }
 
 .circle {
-    border-radius: 50%;
-    width: 16px;
-    height: 16px;
-    padding: 5px;
-    background: #9356DC;
-    /*border: 3px solid #000;*/
-    color: white;
-    text-align: center;
-    line-height: 10px;
-    font: 14px Arial, sans-serif;
-    font-weight: bold;
-  }
-
-.icon1 {
-    position: relative;
-    right: 10px;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  padding: 5px;
+  background: #9356DC;
+  color: white;
+  text-align: center;
+  line-height: 10px;
+  font: 14px Arial, sans-serif;
+  font-weight: bold;
+  position: relative;
+  right: 10px;
 }
 
-.icon2 {
-    color: gray;
-}
+/*# sourceMappingURL=style.css.map */
