--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* ---------- Typo ---------- */
 body {
   font-family: Arial, serif;
   padding: 0;
@@ -13,6 +14,7 @@ h4 {
   font-size: 16px;
 }
 
+/* ---------- Header ---------- */
 header {
   display: flex;
   flex-direction: column;
@@ -22,10 +24,13 @@ header .header__logo {
   display: flex;
   width: 100%;
   justify-content: center;
-  height: 30px;
   margin: 20px;
 }
+header .header__logo img {
+  height: 30px;
+}
 
+/* ---------- Form ---------- */
 .form {
   width: 100%;
   display: flex;
@@ -50,6 +55,7 @@ header .header__logo {
   padding: 15px 0;
 }
 
+/* ---------- Homes ---------- */
 .explo {
   background-color: rgb(246, 246, 246);
   display: flex;
