--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -6,7 +6,9 @@ header {
         display: flex;
         width: 100%;
         justify-content: center;
-        height: 30px;
         margin: 20px;
+        img {
+            height: 30px;
+        }
     }
 }
