--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -3,7 +3,7 @@
     display: flex;
     border-radius: 20px;
     width: 100%;
-    max-width: 500px;
+    max-width: 300px;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: rgb(246, 246, 246);
@@ -25,7 +25,7 @@
     flex-direction: column;
     border-radius: 20px;
     width: 100%;
-    max-width: 500px;
+    max-width: 300px;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: rgb(246, 246, 246);
@@ -50,3 +50,32 @@
     }
 }
 
+.card-menu {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 300px;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: rgb(246, 246, 246);
+    &__img {
+        border-radius: 15px 15px 0 0;
+        width: 100%;
+        height: 170px;
+        object-fit: cover;
+    }
+    &__description {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
+    &__txt {
+        padding: 0 10px 10px 10px;
+        box-sizing: border-box;
+    }
+    &__icon {
+        align-self: center;
+        padding: 10px;
+    }
+}
