--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -3,10 +3,46 @@ footer {
     padding: 20px;
     width: 100%;
     color: white;
+    display: flex;
+    justify-content: center;
+    a {
+        color: white;
+        margin-bottom: 5px;
+    }
+    i {
+        margin-right: 5px;
+        width: 15px;
+        font-size: 14px
+    }
+    .footer__box {
+        display: flex;
+        flex-direction: column;
+        width:100%;
+        max-width: 350px;
+        align-items: center;
+        justify-content: center;
+        @include mobile-only {
+            align-items: baseline;
+        }      
+    }
+    .footer__link_box{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        @include mobile-only {
+            align-items: baseline;
+        }
+    }
     .footer__logo {
         display: flex;
         width: 100%;
-        height: 20px;
+        height: 18px;
+        margin-bottom: 15px;
         filter: invert(100%);
+        justify-content: center;
+        @include mobile-only {
+            justify-content: left;
+        }
     }
+    
 }
