--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,6 +2,11 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    i{
+        font-size: 22px;
+        position: relative;
+        right: 70px;
+    }
     .header__logo {
         display: flex;
         width: 100%;
