--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -15,15 +15,24 @@
     margin-bottom: 30px;
     &__title {
         width: 100%;
-        max-width: 500px;
+        max-width: 940px;
+        @media (max-width: 900px) {
+            max-width: 300px;
+        }
     }
     &__box {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         width: 90%;
         gap: 20px;
         align-items: center;
+        justify-content: center;
+        @media (max-width: 900px) {
+            flex-direction: column;
+            justify-content: baseline;
+        }
     }
+    
 }
 
 .resto {
@@ -31,10 +40,26 @@
     flex-direction: column;
     align-items: center;
     background-color: rgb(246, 246, 246);
-    padding: 20px;
+    padding-bottom: 30px;
     gap: 20px;
     &__title {
         width: 100%;
-        max-width: 500px;
+        max-width: 940px;
+        padding-left: 20px;
+    }
+    &__box {
+        display: flex;
+        flex-direction: row;
+        width: 90%;
+        gap: 20px;
+        align-items: center;
+        justify-content: center;
+        max-width: 940px;
+        @media (max-width: 900px) {
+            flex-direction: column;
+            justify-content: baseline;
+            
+        }
     }
 }
+
