--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400&family=Shrikhand&display=swap');
+
+
 body{
-    font-family: Arial, serif;
+    font-family: Roboto, Arial, serif;
     padding: 0;
     margin: 0;
 }
 
 h1, h2 {
+    font-family: Shrikhand;
     font-size: 22px;
     font-weight: bolder;
 }
@@ -15,4 +20,5 @@ h4 {
 
 a {
     text-decoration: none;
+    color: black;
 }
