--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -20,6 +20,20 @@
     
 }
 
+.ic{
+    font-size: 40px;      
+    background:-moz-linear-gradient(top, #e72c83 0%, #a742c6 100%); 
+    background: -webkit-linear-gradient(top, #e72c83 0%,#a742c6 100%); 
+    background: linear-gradient(to bottom, #e72c83 0%,#a742c6 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+   -webkit-text-fill-color:transparent;
+   }
+.ic i:before {
+    display: inline;
+  }
+
 .card-resto {
     display: flex;
     flex-direction: column;
@@ -29,6 +43,28 @@
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: rgb(246, 246, 246);
+    .material-icons {
+        &.base { 
+            font-size: 30px;
+            align-self: center;
+            background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+	        -webkit-background-clip: text;
+	        -webkit-text-fill-color: transparent;
+            &:hover {
+                display: none;
+            }
+        }
+    }
+    .material-icons {
+        &.hover { 
+            display: none;
+            font-size: 30px;
+            align-self: center;
+            background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+	        -webkit-background-clip: text;
+	        -webkit-text-fill-color: transparent;
+        }
+    }
     &__img {
         border-radius: 15px 15px 0 0;
         width: 100%;
@@ -41,10 +77,16 @@
         justify-content: space-between;
     }
     &__txt {
-        padding: 0 10px 10px 10px;
+        width: 90%;
+        padding: 10px 10px 10px 15px;
+        margin: 0;
         box-sizing: border-box;
+        p {
+            margin: 0 0 5px 0;
+        }
     }
     &__icon {
+        width: 10%;
         align-self: center;
         padding: 10px;
     }
@@ -59,6 +101,9 @@
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: rgb(246, 246, 246);
+    @media (max-width: 900px) {
+        background-color: white;   
+    }
     &__img {
         border-radius: 15px 15px 0 0;
         width: 100%;
@@ -71,11 +116,17 @@
         justify-content: space-between;
     }
     &__txt {
-        padding: 0 10px 10px 10px;
+        width: 90%;
+        padding: 10px 10px 10px 15px;
+        margin: 0;
         box-sizing: border-box;
+        p {
+            margin: 5px 0 0 0;
+        }
     }
-    &__icon {
-        align-self: center;
+    &__price {
+        width: 10%;
+        align-self: flex-end;
         padding: 10px;
     }
 }
