--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,16 +2,19 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(246, 246, 246);
     i{
         font-size: 22px;
         position: relative;
         right: 70px;
     }
     .header__logo {
+        background-color: white;
         display: flex;
+        height: 100%;
         width: 100%;
         justify-content: center;
-        margin: 20px;
+        padding: 20px 0 20px 0;
         img {
             height: 30px;
         }
