--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,6 +16,7 @@
     &__title {
         width: 100%;
         max-width: 940px;
+        margin-bottom: 20px;
         @media (max-width: 900px) {
             max-width: 300px;
         }
@@ -45,7 +46,9 @@
     &__title {
         width: 100%;
         max-width: 940px;
-        padding-left: 20px;
+        @media (max-width: 900px) {
+            max-width: 300px;
+        }
     }
     &__box {
         display: flex;
@@ -55,6 +58,11 @@
         align-items: center;
         justify-content: center;
         max-width: 940px;
+        a {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+        }
         @media (max-width: 900px) {
             flex-direction: column;
             justify-content: baseline;
