--- a/sass/pages/_resto_palette.scss
+++ b/sass/pages/_resto_palette.scss
@@ -1,7 +1,35 @@
+main {
+    background-color: rgb(246, 246, 246);
+}
+
 .menu__img {
     height: 250px;
-    width: 100%;
+    width: 375px;
     object-fit: cover;
+}
+
+.dish-box {
+    display: flex;
+    flex-direction: row;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 1200px;
+    align-items: center;
+    gap: 10px;
+    .dish {
+        display: flex;
+        flex-direction: column;
+        border-radius: 20px;
+        width: 100%;
+        max-width: 400px;
+        align-items: center;
+        gap: 10px;
+    }
+    @media (max-width: 900px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;     
+    }
 }
 
 .menu {
@@ -10,12 +38,21 @@
     align-self: center;
     align-items: center;
     border-radius: 40px 40px 0 0;
-    background-color: rgb(246, 246, 246);
-    padding-bottom: 30px;
+    background-color: white;
+    //padding-bottom: 30px;
     width: 100%;
     gap: 20px;
     position: relative;
     bottom: 50px;
+    @media (max-width: 400px) {
+        background-color: rgb(246, 246, 246);   
+    }
+    &__name {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 75%;
+    }
     &__title {
         width: 100%;
         max-width: 300px;
@@ -32,7 +69,22 @@
         @media (max-width: 900px) {
             flex-direction: column;
             justify-content: baseline;
+            //background-color: rgb(246, 246, 246);
             
         }
     }
+}
+
+h2 {
+    margin-bottom: 0;
+}
+
+hr {
+    display: block;
+    width: 50px;
+    color: aquamarine;
+    border: 0;
+    border-top: 3px solid #99E2D0;
+    margin: 0;
+    padding: 0;
 }
