--- a/css/style.css
+++ b/css/style.css
@@ -59,16 +59,17 @@ header .header__logo img {
   color: black;
   opacity: 1;
 }
-.form i {
-  align-self: center;
-  margin-right: 10px;
-}
 .form__loc {
   display: flex;
   justify-content: center;
   width: 100%;
   background-color: rgb(234, 234, 234);
   padding: 15px 0;
+}
+.form__loc i {
+  display: flex;
+  align-self: center;
+  margin-right: 10px;
 }
 
 /* ---------- Homes ---------- */
@@ -86,7 +87,8 @@ header .header__logo img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
+  padding-bottom: 30px;
+  background-color: white;
 }
 .working__title {
   width: 100%;
@@ -209,6 +211,7 @@ main {
   align-items: center;
   justify-content: space-between;
   width: 75%;
+  max-width: 375px;
 }
 .menu__title {
   width: 100%;
@@ -228,6 +231,7 @@ main {
   .menu__box {
     flex-direction: column;
     justify-content: baseline;
+    background-color: rgb(246, 246, 246);
   }
 }
 
