--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,7 +12,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
+    background-color: white;
     &__title {
         width: 100%;
         max-width: 940px;
