--- a/sass/pages/_resto_palette.scss
+++ b/sass/pages/_resto_palette.scss
@@ -8,6 +8,7 @@ main {
     object-fit: cover;
 }
 
+
 .dish-box {
     display: flex;
     flex-direction: row;
@@ -52,6 +53,7 @@ main {
         align-items: center;
         justify-content: space-between;
         width: 75%;
+        max-width: 375px;
     }
     &__title {
         width: 100%;
@@ -69,7 +71,7 @@ main {
         @media (max-width: 900px) {
             flex-direction: column;
             justify-content: baseline;
-            //background-color: rgb(246, 246, 246);
+            background-color: rgb(246, 246, 246);
             
         }
     }
