--- a/css/style.css
+++ b/css/style.css
@@ -134,16 +134,18 @@ header .header__logo img {
 }
 .resto__box {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   width: 90%;
   gap: 20px;
   align-items: center;
   justify-content: center;
-  max-width: 940px;
+  max-width: 1160px;
 }
 .resto__box a {
   display: flex;
-  width: 100%;
+  flex-direction: row;
+  width: 40%;
   justify-content: center;
 }
 @media (max-width: 900px) {
@@ -151,16 +153,34 @@ header .header__logo img {
     flex-direction: column;
     justify-content: baseline;
   }
+  .resto__box a {
+    width: 100%;
+  }
 }
 
 main {
   background-color: rgb(246, 246, 246);
 }
 
-.menu__img {
-  height: 250px;
-  width: 375px;
+.img_box {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
   object-fit: cover;
+}
+@media (max-width: 600px) {
+  .img_box {
+    height: 250px;
+  }
+}
+
+.menu__img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
 .dish-box {
@@ -196,7 +216,8 @@ main {
   align-items: center;
   border-radius: 40px 40px 0 0;
   background-color: white;
-  width: 100%;
+  margin: auto;
+  width: 80%;
   gap: 20px;
   position: relative;
   bottom: 50px;
@@ -292,10 +313,12 @@ footer .footer__link_box {
 footer .footer__logo {
   display: flex;
   width: 100%;
-  height: 18px;
   margin-bottom: 15px;
   filter: invert(100%);
   justify-content: center;
+}
+footer .footer__logo img {
+  width: 120px;
 }
 @media screen and (max-width: 900px) {
   footer .footer__logo {
@@ -303,7 +326,13 @@ footer .footer__logo {
   }
 }
 
-.button_search {
+.btn-gradient {
+  outline: none;
+  background: transparent;
+  border: 1px solid transparent;
+  margin: 20px;
+}
+.btn-gradient a {
   border: 0;
   border-radius: 30px;
   background-image: linear-gradient(to top left, #9356DC, #FF79DA);
@@ -311,7 +340,28 @@ footer .footer__logo {
   font-size: 16px;
   padding: 15px 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 20px;
+}
+.btn-gradient a:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+  background-image: linear-gradient(to top left, #985ede, #ff83dd);
+}
+
+.btn-favorite {
+  outline: none;
+  background: transparent;
+  border: 1px solid transparent;
+  font-family: "Material Icons";
+  font-size: 30px;
+}
+.btn-favorite::after {
+  content: "\e87e";
+  transition: all 400ms;
+}
+.btn-favorite:hover::after {
+  content: "\e87d";
+  background: linear-gradient(to top left, #9356DC, #FF79DA);
+  background-clip: text;
+  color: transparent;
 }
 
 .card-working {
@@ -354,7 +404,7 @@ footer .footer__logo {
   flex-direction: column;
   border-radius: 20px;
   width: 100%;
-  max-width: 300px;
+  max-width: 500px;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: rgb(246, 246, 246);
@@ -457,6 +507,97 @@ footer .footer__logo {
   font-weight: bold;
   position: relative;
   right: 10px;
+}
+
+.loader {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: white;
+  z-index: 3;
+  animation: loader 0.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 3s;
+}
+.loader__anim {
+  animation: rotate 1.5s infinite;
+  height: 50px;
+  width: 50px;
+}
+.loader__anim::before {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  animation: ball1 1.5s infinite;
+  background-color: #9356DC;
+  box-shadow: 30px 0 0 #9356DC;
+  margin-bottom: 10px;
+}
+.loader__anim::after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+  animation: ball2 1.5s infinite;
+  background-color: #FF79DA;
+  box-shadow: 30px 0 0 #FF79DA;
+}
+
+@keyframes loader {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg) scale(0.8);
+    -moz-transform: rotate(0deg) scale(0.8);
+  }
+  50% {
+    -webkit-transform: rotate(360deg) scale(1.2);
+    -moz-transform: rotate(360deg) scale(1.2);
+  }
+  100% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+    -moz-transform: rotate(720deg) scale(0.8);
+  }
+}
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 #99E2D0;
+  }
+  50% {
+    box-shadow: 0 0 0 #99E2D0;
+    margin-bottom: 0;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #99E2D0;
+    margin-bottom: 10px;
+  }
+}
+@keyframes ball2 {
+  0% {
+    box-shadow: 30px 0 0 #9356DC;
+  }
+  50% {
+    box-shadow: 0 0 0 #9356DC;
+    margin-top: -20px;
+    -webkit-transform: translate(15px, 15px);
+    -moz-transform: translate(15px, 15px);
+  }
+  100% {
+    box-shadow: 30px 0 0 #9356DC;
+    margin-top: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
