--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -36,10 +36,12 @@ footer {
     .footer__logo {
         display: flex;
         width: 100%;
-        height: 18px;
         margin-bottom: 15px;
         filter: invert(100%);
         justify-content: center;
+        img {
+            width: 120px;
+        }
         @include mobile-only {
             justify-content: left;
         }
