--- a/sass/pages/_resto_palette.scss
+++ b/sass/pages/_resto_palette.scss
@@ -2,10 +2,26 @@ main {
     background-color: rgb(246, 246, 246);
 }
 
-.menu__img {
-    height: 250px;
-    width: 375px;
+.img_box {
+    width: 100%;
+    height: 400px;
+    overflow:hidden;
     object-fit: cover;
+    @media (max-width: 600px) {
+        height: 250px;     
+    }
+}
+.menu__img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+    top: 0;
+    left: 0;
+    //overflow:hidden;
+    //@media (max-width: 400px) {
+    //    height: 250px;     
+    //}
 }
 
 
@@ -40,8 +56,10 @@ main {
     align-items: center;
     border-radius: 40px 40px 0 0;
     background-color: white;
+    margin: auto;
     //padding-bottom: 30px;
-    width: 100%;
+    width: 80%;
+    //max-width: 1200px;
     gap: 20px;
     position: relative;
     bottom: 50px;
