--- a/sass/base/_typo.scss
+++ b/sass/base/_typo.scss
@@ -8,11 +8,13 @@ body{
     margin: 0;
 }
 
-h1, h2 {
+h1 {
     font-family: Shrikhand;
     font-size: 22px;
     font-weight: bolder;
 }
+
+
 
 h4 {
     font-size: 16px;
