--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -20,20 +20,6 @@
     
 }
 
-.ic{
-    font-size: 40px;      
-    background:-moz-linear-gradient(top, #e72c83 0%, #a742c6 100%); 
-    background: -webkit-linear-gradient(top, #e72c83 0%,#a742c6 100%); 
-    background: linear-gradient(to bottom, #e72c83 0%,#a742c6 100%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-   -webkit-text-fill-color:transparent;
-   }
-.ic i:before {
-    display: inline;
-  }
-
 .card-resto {
     display: flex;
     flex-direction: column;
@@ -92,41 +78,102 @@
     }
 }
 
+.icheck {
+    font-size: 0;
+}
+
 .card-menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     border-radius: 20px;
-    width: 100%;
-    max-width: 300px;
+    height: 68px;
+    width: 300px;
+    overflow: hidden;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: rgb(246, 246, 246);
-    @media (max-width: 900px) {
-        background-color: white;   
+    background-color: white;
+    opacity: 0;
+    animation: dish_anim 1s forwards;
+    &:hover {
+        .card-menu__check {
+            width: 20%;
+            height: 100%;
+            transform: scaleX(1);
+            overflow: hidden;
+        }
+        .icheck {
+            font-size: 24px;
+            color: white;
+            animation: check_rotate 0.5s;
+        }
+        .card-menu__txt {
+            width: 50%;
+        }
+        .card-menu__description {
+            width: 80%;
+        }
     }
-    &__img {
-        border-radius: 15px 15px 0 0;
-        width: 100%;
-        height: 170px;
-        object-fit: cover;
+    &__check {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        width: 20%;
+        height: 100%;
+        background-color: $color-tertiary;
+        border-radius: 0 20px 20px 0;
+        transition: all 400ms;
+        transform-origin: 100% 50%;
+        transform: scaleX(0);
+        overflow: hidden;
     }
     &__description {
         display: flex;
         width: 100%;
         justify-content: space-between;
+        align-content: center;
+        
     }
     &__txt {
-        width: 90%;
+        display: flex;
+        flex-direction: column;
+        width: 80%;
         padding: 10px 10px 10px 15px;
         margin: 0;
-        box-sizing: border-box;
-        p {
+        &--dish {
+            white-space: nowrap;
             margin: 5px 0 0 0;
+        }
+        &--detail {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            font-size: small;
         }
     }
     &__price {
         width: 10%;
         align-self: flex-end;
         padding: 10px;
+    }
+}
+
+@keyframes check_rotate{
+	from {
+        transform: rotate(-180deg)
+    }
+    to {
+		transform: rotate(0deg)
+    }
+}
+
+@keyframes dish_anim{
+	from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    to {
+		transform: translateY(0);
+        opacity: 1;
     }
 }
