--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,6 +1,7 @@
 footer {
     background-color: rgb(53,53,53);
-    padding: 20px;
+    padding: 20px 0 0 0;
+    margin: 0;
     width: 100%;
     color: white;
     display: flex;
