--- a/sass/pages/_resto.scss
+++ b/sass/pages/_resto.scss
@@ -7,17 +7,20 @@ main {
     height: 400px;
     overflow:hidden;
     object-fit: cover;
+    //z-index: 1;
     @media (max-width: 600px) {
         height: 250px;     
     }
 }
 .menu__img {
+    //display: flex;
     height: 100%;
     width: 100%;
     object-fit: cover;
     position: relative;
     top: 0;
     left: 0;
+    z-index: 0;
     //overflow:hidden;
     //@media (max-width: 400px) {
     //    height: 250px;     
@@ -54,24 +57,31 @@ main {
     flex-direction: column;
     align-self: center;
     align-items: center;
-    border-radius: 40px 40px 0 0;
-    background-color: white;
+    
+    background-color: rgb(246, 246, 246);
     margin: auto;
     //padding-bottom: 30px;
-    width: 80%;
+    
+    width: 70%;
     //max-width: 1200px;
-    gap: 20px;
-    position: relative;
-    bottom: 50px;
-    @media (max-width: 400px) {
-        background-color: rgb(246, 246, 246);   
-    }
+    //gap: 20px;
+    
+    //@media (max-width: 400px) {
+    //    background-color: rgb(246, 246, 246);   
+    //}
     &__name {
         display: flex;
         align-items: center;
+        border-radius: 40px 40px 0 0;
+        position: relative;
+        bottom: 50px;
+        z-index: 3;
+        background-color: rgb(246, 246, 246);
         justify-content: space-between;
-        width: 75%;
-        max-width: 375px;
+        width: 100%;
+        height: 50px;
+        margin-bottom: -50px;
+        //max-width: 375px;
     }
     &__title {
         width: 100%;
@@ -80,7 +90,7 @@ main {
     }
     &__box {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         width: 90%;
         gap: 20px;
         align-items: center;
@@ -89,7 +99,7 @@ main {
         @media (max-width: 900px) {
             flex-direction: column;
             justify-content: baseline;
-            background-color: rgb(246, 246, 246);
+            //background-color: rgb(246, 246, 246);
             
         }
     }
@@ -108,3 +118,5 @@ hr {
     margin: 0;
     padding: 0;
 }
+
+
