--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-family: Shrikhand;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: bolder;
 }
 
@@ -47,8 +47,8 @@ header {
 }
 header i {
   font-size: 22px;
-  position: relative;
-  right: 70px;
+  position: fixed;
+  left: 20px;
 }
 header .header__logo {
   background-color: white;
@@ -67,14 +67,6 @@ header .header__logo img {
   width: 100%;
   display: flex;
 }
-.form input {
-  background-color: rgb(234, 234, 234);
-  border: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: black;
-  opacity: 1;
-}
 .form__loc {
   display: flex;
   justify-content: center;
@@ -83,9 +75,18 @@ header .header__logo img {
   padding: 15px 0;
 }
 .form__loc i {
-  display: flex;
+  position: relative !important;
+  margin-right: 30px;
   align-self: center;
-  margin-right: 10px;
+}
+.form__loc input {
+  background-color: rgb(234, 234, 234);
+  border: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  opacity: 1;
+  height: 100%;
 }
 
 /* ---------- Homes ---------- */
@@ -127,7 +128,7 @@ header .header__logo img {
 @media (max-width: 900px) {
   .working__box {
     flex-direction: column;
-    justify-content: baseline;
+    justify-content: initial;
   }
 }
 
@@ -167,17 +168,16 @@ header .header__logo img {
 @media (max-width: 900px) {
   .resto__box {
     flex-direction: column;
-    justify-content: baseline;
+    justify-content: initial;
   }
   .resto__box a {
     width: 100%;
   }
 }
 
-main {
-  background-color: rgb(246, 246, 246);
-}
-
+/*main {
+    background-color: rgb(246, 246, 246);
+}*/
 .img_box {
   width: 100%;
   height: 400px;
@@ -206,7 +206,7 @@ main {
   border-radius: 20px;
   width: 100%;
   max-width: 1200px;
-  align-items: center;
+  vertical-align: top;
   gap: 10px;
 }
 .dish-box .dish {
@@ -218,7 +218,7 @@ main {
   align-items: center;
   gap: 10px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .dish-box {
     flex-direction: column;
     justify-content: center;
@@ -233,7 +233,13 @@ main {
   align-items: center;
   background-color: rgb(246, 246, 246);
   margin: auto;
+  padding-bottom: 20px;
   width: 70%;
+}
+@media (max-width: 1400px) {
+  .menu {
+    width: 100%;
+  }
 }
 .menu__name {
   display: flex;
@@ -243,10 +249,22 @@ main {
   bottom: 50px;
   z-index: 3;
   background-color: rgb(246, 246, 246);
-  justify-content: space-between;
+  justify-content: center;
   width: 100%;
   height: 50px;
   margin-bottom: -50px;
+}
+.menu__name h2 {
+  height: 50px;
+}
+.menu__name--box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 350px;
+  padding: 40px 30px 0 30px;
+  margin-bottom: 20px;
 }
 .menu__title {
   width: 100%;
@@ -258,14 +276,15 @@ main {
   flex-direction: column;
   width: 90%;
   gap: 20px;
+  padding-bottom: 20px;
   align-items: center;
   justify-content: center;
   max-width: 940px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
   .menu__box {
     flex-direction: column;
-    justify-content: baseline;
+    justify-content: initial;
   }
 }
 
@@ -461,18 +480,20 @@ footer .footer__logo img {
   flex-direction: row;
   border-radius: 20px;
   height: 68px;
-  width: 300px;
+  width: 320px;
   overflow: hidden;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: white;
   opacity: 0;
   animation: dish_anim 1s forwards;
+  transition: all 400ms;
 }
 .card-menu:hover .card-menu__check {
   width: 20%;
   height: 100%;
-  transform: scaleX(1);
+  background-color: #99E2D0;
+  transform: translateX(0%);
   overflow: hidden;
 }
 .card-menu:hover .icheck {
@@ -491,14 +512,12 @@ footer .footer__logo img {
   align-items: center;
   justify-content: center;
   margin: 0;
-  width: 20%;
   height: 100%;
   background-color: #99E2D0;
   border-radius: 0 20px 20px 0;
-  transition: all 400ms;
   transform-origin: 100% 50%;
-  transform: scaleX(0);
-  overflow: hidden;
+  transform: translateX(100%);
+  transition: transform 400ms;
 }
 .card-menu__description {
   display: flex;
@@ -539,7 +558,7 @@ footer .footer__logo img {
 }
 @keyframes dish_anim {
   from {
-    transform: translateY(100%);
+    transform: translateY(30px);
     opacity: 0;
   }
   to {
