--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -80,6 +80,7 @@
 
 .icheck {
     font-size: 0;
+
 }
 
 .card-menu {
@@ -87,18 +88,20 @@
     flex-direction: row;
     border-radius: 20px;
     height: 68px;
-    width: 300px;
+    width: 320px;
     overflow: hidden;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     background-color: white;
     opacity: 0;
     animation: dish_anim 1s forwards;
+    transition: all 400ms;
     &:hover {
         .card-menu__check {
             width: 20%;
             height: 100%;
-            transform: scaleX(1);
+            background-color: $color-tertiary;
+            transform: translateX(0%);
             overflow: hidden;
         }
         .icheck {
@@ -118,14 +121,13 @@
         align-items: center;
         justify-content: center;
         margin: 0;
-        width: 20%;
         height: 100%;
+        //width: 0px;
         background-color: $color-tertiary;
         border-radius: 0 20px 20px 0;
-        transition: all 400ms;
         transform-origin: 100% 50%;
-        transform: scaleX(0);
-        overflow: hidden;
+        transform: translateX(100%);
+        transition: transform 400ms;
     }
     &__description {
         display: flex;
@@ -169,7 +171,7 @@
 
 @keyframes dish_anim{
 	from {
-        transform: translateY(100%);
+        transform: translateY(30px);
         opacity: 0;
     }
     to {
