--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,8 +5,8 @@ header {
     background-color: rgb(246, 246, 246);
     i{
         font-size: 22px;
-        position: relative;
-        right: 70px;
+        position: fixed;
+        left: 20px;
     }
     .header__logo {
         background-color: white;
