--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -31,7 +31,7 @@
         justify-content: center;
         @media (max-width: 900px) {
             flex-direction: column;
-            justify-content: baseline;
+            justify-content: initial;
         }
     }
     
@@ -68,7 +68,7 @@
         }
         @media (max-width: 900px) {
             flex-direction: column;
-            justify-content: baseline;
+            justify-content: initial;
             a {
                 width: 100%;
             }
