--- a/sass/pages/_resto.scss
+++ b/sass/pages/_resto.scss
@@ -1,6 +1,6 @@
-main {
+/*main {
     background-color: rgb(246, 246, 246);
-}
+}*/
 
 .img_box {
     width: 100%;
@@ -34,7 +34,7 @@ main {
     border-radius: 20px;
     width: 100%;
     max-width: 1200px;
-    align-items: center;
+    vertical-align: top;
     gap: 10px;
     .dish {
         display: flex;
@@ -45,7 +45,7 @@ main {
         align-items: center;
         gap: 10px;
     }
-    @media (max-width: 900px) {
+    @media (max-width: 1000px) {
         flex-direction: column;
         justify-content: center;
         align-items: center;     
@@ -57,18 +57,13 @@ main {
     flex-direction: column;
     align-self: center;
     align-items: center;
-    
     background-color: rgb(246, 246, 246);
     margin: auto;
-    //padding-bottom: 30px;
-    
+    padding-bottom: 20px;  
     width: 70%;
-    //max-width: 1200px;
-    //gap: 20px;
-    
-    //@media (max-width: 400px) {
-    //    background-color: rgb(246, 246, 246);   
-    //}
+    @media (max-width: 1400px) {
+        width: 100%;     
+    }
     &__name {
         display: flex;
         align-items: center;
@@ -77,11 +72,23 @@ main {
         bottom: 50px;
         z-index: 3;
         background-color: rgb(246, 246, 246);
-        justify-content: space-between;
+        justify-content: center;
         width: 100%;
         height: 50px;
         margin-bottom: -50px;
         //max-width: 375px;
+        h2 {
+            height: 50px;
+        }
+        &--box {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            max-width: 350px;
+            padding: 40px 30px 0 30px;
+            margin-bottom: 20px;
+        }
     }
     &__title {
         width: 100%;
@@ -93,12 +100,13 @@ main {
         flex-direction: column;
         width: 90%;
         gap: 20px;
+        padding-bottom: 20px;
         align-items: center;
         justify-content: center;
         max-width: 940px;
-        @media (max-width: 900px) {
+        @media (max-width: 1000px) {
             flex-direction: column;
-            justify-content: baseline;
+            justify-content: initial;
             //background-color: rgb(246, 246, 246);
             
         }
