--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,5 +17,5 @@
 @import "./components/button";
 @import "./components/cards";
 @import "./components/icons";
-@import "./components/loader";
+@import "./components/load";
 
