--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -95,13 +95,14 @@
     background-color: white;
     opacity: 0;
     animation: dish_anim 1s forwards;
-    transition: all 400ms;
+    //transition: all 400ms;
     &:hover {
         .card-menu__check {
-            width: 20%;
+            width: 80px;
             height: 100%;
             background-color: $color-tertiary;
             transform: translateX(0%);
+            //transform-origin: 0% 50%;
             overflow: hidden;
         }
         .icheck {
@@ -122,12 +123,12 @@
         justify-content: center;
         margin: 0;
         height: 100%;
-        //width: 0px;
+        width: 0;
         background-color: $color-tertiary;
         border-radius: 0 20px 20px 0;
         transform-origin: 100% 50%;
         transform: translateX(100%);
-        transition: transform 400ms;
+        transition: all 400ms ease;
     }
     &__description {
         display: flex;
