--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header .header__logo img {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 100%;
+  width: 90%;
   padding: 15px 40px 30px 40px;
 }
 
@@ -112,9 +112,10 @@ header .header__logo img {
   max-width: 940px;
   margin-bottom: 20px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1280px) {
   .working__title {
     max-width: 300px;
+    width: 90%;
   }
 }
 .working__box {
@@ -125,7 +126,7 @@ header .header__logo img {
   align-items: center;
   justify-content: center;
 }
-@media (max-width: 900px) {
+@media (max-width: 1280px) {
   .working__box {
     flex-direction: column;
     justify-content: initial;
@@ -144,9 +145,10 @@ header .header__logo img {
   width: 100%;
   max-width: 940px;
 }
-@media (max-width: 900px) {
+@media (max-width: 1280px) {
   .resto__title {
-    max-width: 300px;
+    max-width: 480px;
+    width: 90%;
   }
 }
 .resto__box {
@@ -165,7 +167,7 @@ header .header__logo img {
   width: 40%;
   justify-content: center;
 }
-@media (max-width: 900px) {
+@media (max-width: 1280px) {
   .resto__box {
     flex-direction: column;
     justify-content: initial;
@@ -207,6 +209,7 @@ header .header__logo img {
   width: 100%;
   max-width: 1200px;
   vertical-align: top;
+  padding-top: 20px;
   gap: 10px;
 }
 .dish-box .dish {
@@ -254,9 +257,6 @@ header .header__logo img {
   height: 50px;
   margin-bottom: -50px;
 }
-.menu__name h2 {
-  height: 50px;
-}
 .menu__name--box {
   display: flex;
   align-items: center;
@@ -268,8 +268,12 @@ header .header__logo img {
 }
 .menu__title {
   width: 100%;
-  max-width: 300px;
-  padding-left: 20px;
+  max-width: 400px;
+  padding-left: 40px;
+}
+.menu__title h2 {
+  font-size: 20px;
+  font-weight: 300;
 }
 .menu__box {
   display: flex;
@@ -327,10 +331,12 @@ footer .footer__box {
   max-width: 350px;
   align-items: center;
   justify-content: center;
+  padding-bottom: 20px;
 }
 @media screen and (max-width: 900px) {
   footer .footer__box {
     align-items: baseline;
+    width: 90%;
   }
 }
 footer .footer__link_box {
@@ -499,8 +505,18 @@ footer .footer__logo img {
 .card-menu:hover .card-menu__txt {
   width: 60%;
 }
+@media (max-width: 350px) {
+  .card-menu:hover .card-menu__txt {
+    width: 50%;
+  }
+}
 .card-menu:hover .card-menu__description {
   width: 80%;
+}
+@media (max-width: 350px) {
+  .card-menu:hover .card-menu__description {
+    width: 70%;
+  }
 }
 .card-menu__check {
   display: flex;
@@ -518,7 +534,6 @@ footer .footer__logo img {
 .card-menu__description {
   display: flex;
   width: 100%;
-  padding-right: 10px;
   box-sizing: border-box;
   justify-content: space-between;
   transition: all 400ms ease;
@@ -531,6 +546,11 @@ footer .footer__logo img {
   padding: 10px 10px 10px 15px;
   margin: 0;
   transition: all 400ms ease;
+}
+@media (max-width: 350px) {
+  .card-menu__txt {
+    width: 60%;
+  }
 }
 .card-menu__txt--dish {
   white-space: nowrap;
