--- a/sass/pages/_resto.scss
+++ b/sass/pages/_resto.scss
@@ -35,6 +35,7 @@
     width: 100%;
     max-width: 1200px;
     vertical-align: top;
+    padding-top: 20px;
     gap: 10px;
     .dish {
         display: flex;
@@ -76,10 +77,7 @@
         width: 100%;
         height: 50px;
         margin-bottom: -50px;
-        //max-width: 375px;
-        h2 {
-            height: 50px;
-        }
+        //}
         &--box {
             display: flex;
             align-items: center;
@@ -92,8 +90,13 @@
     }
     &__title {
         width: 100%;
-        max-width: 300px;
-        padding-left: 20px;
+        max-width: 400px;
+        padding-left: 40px;
+        h2 {
+            font-size: 20px;
+            font-weight: 300;
+        }
+        
     }
     &__box {
         display: flex;
