--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
   font-family: Roboto, Arial, serif;
   padding: 0;
   margin: 0;
+  width: 100%;
 }
 
 h1 {
@@ -97,7 +98,6 @@ header .header__logo img {
   align-items: center;
   text-align: center;
   width: 90%;
-  padding: 15px 40px 30px 40px;
 }
 
 .working {
@@ -254,7 +254,7 @@ header .header__logo img {
   background-color: rgb(246, 246, 246);
   justify-content: center;
   width: 100%;
-  height: 50px;
+  height: 51px;
   margin-bottom: -50px;
 }
 .menu__name--box {
@@ -470,9 +470,11 @@ footer .footer__logo img {
   margin: 0 0 5px 0;
 }
 .card-resto__icon {
+  display: flex;
   width: 10%;
   align-self: center;
   padding: 10px;
+  justify-content: center;
 }
 
 .icheck {
@@ -524,9 +526,9 @@ footer .footer__logo img {
   justify-content: center;
   margin: 0;
   height: 100%;
-  width: 60px;
+  width: 10px;
   position: absolute;
-  right: -60px;
+  right: -10px;
   background-color: #99E2D0;
   border-radius: 0 20px 20px 0;
   transition: all 400ms ease;
