--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,7 @@
     align-items: center;
     text-align: center;
     width: 90%;
-    padding: 15px 40px 30px 40px;
+    //padding: 15px 40px 30px 40px;
 }
 
 .working {
