--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,17 @@ footer .footer__logo img {
   justify-content: center;
 }
 
+.new {
+  display: flex;
+  align-self: flex-end;
+  position: relative;
+  bottom: 150px;
+  right: 10px;
+  background-color: rgb(112, 228, 189);
+  padding: 10px;
+  color: rgb(1, 83, 1);
+}
+
 .icheck {
   font-size: 24px;
   color: white;
