--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,6 +8,11 @@ header {
         position: fixed;
         left: 20px;
     }
+    .material-symbols-rounded{
+        font-size: 22px;
+        position: fixed;
+        left: 20px;
+    }
     .header__logo {
         background-color: white;
         display: flex;
